--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -1,82 +1,76 @@
 .po_items_ho {
-  column-width: 15em;
-  -moz-column-width: 15em;
-  -webkit-column-width: 15em;
-  column-gap: 4rem;
-  -moz-column-gap: 4rem;
-  -webkit-column-gap: 4rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .po_item {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  margin: 0.5rem auto;
   position: relative;
-  background: var(--secondary-color);
-  padding: 6px;
-  border: 1px solid var(--secondary-color);
-  transition: 0.3s ease;
-  font-size: 0;
-  min-height: 300px;
+  width: calc(33.33% - 20px);
+  margin-bottom: 40px;
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
-.po_item img {
-  max-width: 100%;
-}
-
-.po_item .content {
-  position: absolute;
-  height: 0;
-  width: 0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background: var(--overlay-color);
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  height: 100%;
+.project-img {
   width: 100%;
-  transition: 0.3s ease-in-out;
-  opacity: 0;
-  border: 1px solid black;
+  vertical-align: top;
 }
 
-.po_item .content {
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   opacity: 0;
-  transition-delay: 1s;
-  transition: 0.3s ease;
-  font-size: 20px;
+  transform: translateY(100%);
+  transition: opacity 0.3s, transform 0.3s;
 }
 
 .po_item:hover {
-  box-shadow: 0 10px 15px 0 rgba(0, 0, 0, 0.25);
+  transform: translateY(-10px);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
 }
 
-.po_item:hover .content {
-  height: calc(100% - 30px);
-  width: calc(100% - 30px);
+.po_item:hover .overlay {
   opacity: 1;
+  transform: translateY(0);
 }
 
-.po_item:hover .content {
-  opacity: 1;
-  color: var(--secondary-color);
-}
-
-.po_item .content a {
-  background: var(--bg-color);
-  border: solid 1px var(--text-color);
-  padding: 4px 8px;
-  border-radius: 4px;
+.content {
   text-align: center;
-  font-size: 1rem;
-  margin-top: 10px;
+  color: #fff;
+  padding: 20px;
 }
 
-.po_item .content a:hover {
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.view-project,
+.view-code {
+  background-color: #f44336;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin: 0 10px;
   text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.view-project:hover,
+.view-code:hover {
+  background-color: #e53935;
 }
